# Mandelbrot

./: CMakeLists.txt  ColorConvert.h  ComplexNumber.h  README  README.md  main.cpp
